[package]
name = "docs-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17.11"
lychee-lib = "0.18.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.4"
log = "0.4"
env_logger = "0.10"
futures = "0.3.31"
